--- a/index.css
+++ b/index.css
@@ -23,12 +23,18 @@ a:hover {
   color: #535bf2;
 }
 
-body {
+* {
   margin: 0;
+  padding: 0;
+}
+
+body {
+  height: 100vh;
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  align-items: center;
+  justify-content: center;
+  background-color: #fbb034;
+  background-image: linear-gradient(315deg, #fbb034 0%, #ffdd00 74%);
 }
 
 h1 {
